fix: [CDS-81163]: address horizontal scroll flickering issue in overrides list when screen is smaller than usually supported (#18616)
* fix: set min-width to container and allow horizontal scroll inside overrides list container
* fix: revert horizontal scroll style as it is already present at parent level

--- a/src/modules/75-cd/components/ServiceOverrides/components/ListRows/ListRows.module.scss
+++ b/src/modules/75-cd/components/ServiceOverrides/components/ListRows/ListRows.module.scss
@@ -1,3 +1,10 @@
+/*
+ * Copyright 2023 Harness Inc. All rights reserved.
+ * Use of this source code is governed by the PolyForm Shield 1.0.0 license
+ * that can be found in the licenses directory at the root of this repository, also available at
+ * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
+ */
+
 .list-row-container {
   /* 43px is the height of the tabs
    * 20px is the default top margin of tab panel 
@@ -5,6 +12,7 @@
    * 50px is the height of the headers
    */
   height: calc(100vh - var(--page-header-height) - 43px - 20px - 49px - 50px);
+  min-width: 1175px;
   overflow-y: scroll;
 }
 
